# YoutubeDownloader

./: README.md  app.py  dependencies.txt  downloader.py  pyproject.toml  utils.py
.streamlit/: config.toml
downloads/: .gitkeep
static/: fire-animations.css  hacker-terminal.css  matrix-rain.js  particles.js
