[project]
name = "cjsprogramingspace"
version = "0.1.1"
description = "Advanced YouTube Downloader with terminal aesthetic"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.46.0",
    "yt-dlp>=2025.6.9",
    "youtube-dl>=2021.12.17",
    "requests>=2.28.0",
    "beautifulsoup4>=4.10.0",
]
